# tux-icons

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/icon_fetcher/: mod.rs
src/paths/: mod.rs
