[package]
name = "tux-icons"
version = "0.4.2"
edition = "2021"
license = "MIT"
description = "A library for getting desktop icons in linux"
repository = "https://github.com/Whiskers-Apps/tux-icons"


[dependencies]
dirs = "6.0.0"
walkdir = "2.5.0"
freedesktop-desktop-entry = "0.5.0"
clap = { version = "4.5.20", features = ["derive"] }
